--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <!--CSS Stylesheet -->
+    <link rel="stylesheet" href="/css/style.css">
+
     <title>{Username}'s Skincare Quiz</title>
   </head>
   <body>
-    <h1>Step 1: Information</h1>
+    <!-- Page 1 -->
+    <h1>{Username}'s Skincare Quiz</h1>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 14%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 14%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <h2>Step 1: Information</h2>
     <p>Let's learn more about you!</p>
     <form>
         <div class="form-group">
@@ -44,9 +55,162 @@
             </select>
             <small id="emailHelp" class="form-text text-muted">Everyone's skin has unique needs - we want to make sure we're meeting yours.</small>
         </div>
-        <button type="submit" class="btn btn-primary">Next</button>
+        <button type="button" class="btn btn-dark">Next</button>
       </form>
-     
+
+     <!-- Page 2 -->
+     <h1>{Username}'s Skincare Quiz</h1>
+     <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+     <h2>Step 2: Areas of Concern</h2>
+     <p>Select any areas you'd like to focus on</p>
+     <form>
+     <button type="button" class="btn btn-outline-dark btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Face</button>
+     <button type="button" class="btn btn-outline-dark btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Neck</button>
+     <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Back/Shoulders</button>
+     <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Body</button>
+     <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Other</button>
+     <button type="button" class="btn btn-dark">Next</button>
+    </form>
+
+    <!-- Page 3 -->
+    <h1>{Username}'s Skincare Quiz</h1>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 42%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 42%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <h2>Step 3: Your Skin Type</h2>
+    <p>Select the best descriptor of your skin type</p>
+    <form>
+    <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Dry. Your skin feels tight, flaky, and itchy all over</button>
+    <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Oily. Your skin looks shiny, and your pores may be more visible</button>
+    <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Combination. Your skin is tight and flaky in some spots and oily in others</button>
+    <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Normal. Your skin looks and feels generally balanced</button>
+    <button type="button" class="btn btn-dark">Next</button>
+   </form>
+
+    <!-- Page 4 -->
+    <h1>{Username}'s Skincare Quiz</h1>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 56%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 56%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <h2>Step 4: Select Your Skin Concerns</h2>
+    <p>Tell us about your main skin concerns (Select all that apply)</p>
+    <form>
+        <div class="row">
+          <div class="col">
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Dryness</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Oil Control</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Sensitivity</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Aging</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">UV Damage</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Large Pores</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Eye Bags</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Blackheads</button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block btn-block data-toggle="button aria-pressed="false" autocomplete="off">Acne</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Texture</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Redness</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Dark Spots</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Barrier Repair</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Dark Circles</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Dullness</button>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Eczema</button>
+          </div>
+        </div>
+        <button type="button" class="btn btn-dark">Next</button>
+      </form>
+   
+   
+   
+   
+   
+   
+    <!--<form>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Dryness</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Acne</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Oil Control</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Texture</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Sensitivity</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Redness</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Aging</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Dark Spots</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">UV Damage</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Barrier Repair</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Large Pores</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Dark Circles</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Eye Bags</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Dullness</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Blackheads</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Eczema</button>
+        <button type="button" class="btn btn-dark">Next</button>
+       </form> --!>
+
+        <!-- Page 5 -->
+    <h1>{Username}'s Skincare Quiz</h1>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <h2>Step 5: Skin Sensitivity</h2>
+    <p>How does your skin normally react when trying a new product?</p>
+    <form>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">My skin is easily irritated</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">My skin is rarely irritated</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Totally depends</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">I don't usually try new products</button>
+        <button type="button" class="btn btn-dark">Next</button>
+    </form>
+
+    <!-- Page 6 -->
+    <h1>{Username}'s Skincare Quiz</h1>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 84%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 84%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <h2>Step 6: Skin Tone</h2>
+    <p>Select the best representation of your skin tone below</p>
+
+    <button type="button" class="btn btn-dark">Next</button>
+
+    <!-- Page 7 -->
+    <h1>{Username}'s Skincare Quiz</h1>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    <h2>Step 7: Product Use</h2>
+    <p>Please select all products you currently use</p>
+    <form>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Cleanser</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Toner</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Essence</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Serum(s)</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Face Masks</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Eye Cream</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Moisturizer</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Night Cream</button>
+        <button type="button" class="btn btn-outline-dark btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">SPF</button>
+         <button type="button" class="btn btn-dark">Find My Routine</button>
+    </form>
+
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
