--- a/7productuse.html
+++ b/7productuse.html
@@ -1,51 +1,72 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <!--CSS Stylesheet -->
-    <link rel="stylesheet" href="/css/style.css">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>{Username}'s Skincare Quiz</title>
-  </head>
-  <body style="background-color: #FBEBEB;">
-<!-- Page 7 -->
-<h1>Laurie's Skincare Quiz</h1>
-<div class="progress" style="height: 1px;">
-    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+  <!--CSS Stylesheet -->
+  <link rel="stylesheet" href="/css/style.css">
+
+  <title>{Username}'s Skincare Quiz</title>
+</head>
+
+<body style="background-color: #FBEBEB;">
+  <!-- Page 7 -->
+  <h1>Laurie's Skincare Quiz</h1>
+  <div class="progress" style="height: 1px;">
+    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0"
+      aria-valuemax="100"></div>
   </div>
-<div class="progress" style="height: 1px;">
-    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress" style="height: 1px;">
+    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0"
+      aria-valuemax="100"></div>
   </div>
-<h2>Step 7: Product Use</h2>
-<p>Please select all products you currently use</p>
-<form>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Cleanser</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Toner</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Essence</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Serum(s)</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Face Masks</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Eye Cream</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Moisturizer</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Night Cream</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">SPF</button>
+  <h2>Step 7: Product Use</h2>
+  <p>Please select all products you currently use</p>
+  <form>
+    <button type="button" class="btn btn-light btn-lg btn-block data-toggle=" button aria-pressed="false"
+      autocomplete="off">Cleanser</button>
+    <button type="button" class="btn btn-light btn-lg btn-block data-toggle=" button aria-pressed="false"
+      autocomplete="off">Toner</button>
+    <button type="button" class="btn btn-light btn-lg btn-block data-toggle=" button aria-pressed="false"
+      autocomplete="off">Essence</button>
+    <button type="button" class="btn btn-light btn-lg btn-block data-toggle=" button aria-pressed="false"
+      autocomplete="off">Serum(s)</button>
+    <button type="button" class="btn btn-light btn-lg btn-block data-toggle=" button aria-pressed="false"
+      autocomplete="off">Face Masks</button>
+    <button type="button" class="btn btn-light btn-lg btn-block data-toggle=" button aria-pressed="false"
+      autocomplete="off">Eye Cream</button>
+    <button type="button" class="btn btn-light btn-lg btn-block data-toggle=" button aria-pressed="false"
+      autocomplete="off">Moisturizer</button>
+    <button type="button" class="btn btn-light btn-lg btn-block data-toggle=" button aria-pressed="false"
+      autocomplete="off">Night Cream</button>
+    <button type="button" class="btn btn-light btn-lg btn-block data-toggle=" button aria-pressed="false"
+      autocomplete="off">SPF</button>
     <div class="formbutton">
-        <a href="/8favoriteproducts.html">
-    <button type="button" class="btn btn-lg btn-dark">Next</button>
-    </a>
+      <a href="/8favoriteproducts.html">
+        <button type="button" class="btn btn-lg btn-dark">Next</button>
+      </a>
     </div>
-</form>
+  </form>
 
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
