--- a/2areasofconcern.html
+++ b/2areasofconcern.html
@@ -16,7 +16,7 @@
   <body style="background-color: #FBEBEB;">
 
     <!-- Page 2 -->
-    <h1>{Username}'s Skincare Quiz</h1>
+    <h1>Laurie's Skincare Quiz</h1>
     <div class="progress" style="height: 1px;">
        <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
      </div>
