--- a/8favoriteproducts.html
+++ b/8favoriteproducts.html
@@ -16,12 +16,19 @@
   <body style="background-color: #FBEBEB;">
 
     <!-- Page 8 -->
-
-
-    <div class="formbutton">
-        <a href="/2areasofconcern.html">
-        <button type="button" class="btn btn-dark">Next</button>
-        </a>
+    <h1>Laurie's Skincare Quiz</h1>
+    <div class="progress" style="height: 1px;">
+       <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+     </div>
+    <h2>Step 8: Favorite Products</h2>
+    <p>DO you have products you currently use and love?</p>
+    <form>
+        <a href="/8yes.html">
+    <button type="button" class="btn btn-light btn-lg btn-block favorite" data-toggle="button" aria-pressed="false" autocomplete="off">Sure Do!</button>
+    </a>
+    <a href="/9pricepoint.html">
+    <button type="button" class="btn btn-light btn-lg btn-block favorite" data-toggle="button" aria-pressed="false" autocomplete="off">I wish!</button>
+    </a>
       </div>
       </form>
 
