--- a/9pricepoint.html
+++ b/9pricepoint.html
@@ -12,8 +12,11 @@
     <link rel="stylesheet" href="/css/style.css">
 
     <title>{Username}'s Skincare Quiz</title>
+   <style> 
+  
+</style>
   </head>
-  <body style="background-color: #FBEBEB;">
+  <body style="background-color: #FBEBEB; background-image: url(../images/Step9Wave.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
 
     <!-- Page 9 -->
 
