--- a/8favoriteproducts.html
+++ b/8favoriteproducts.html
@@ -1,41 +1,53 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
+
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
 
     <title>{Username}'s Skincare Quiz</title>
-  </head>
-  <body style="background-color: #FBEBEB;">
+</head>
+
+<body style="background-color: #FBEBEB; background-image: url(../images/Step8Wave.png); background-repeat: no-repeat; background-size: 100%; background-position: bottom;">
 
     <!-- Page 8 -->
     <h1>Laurie's Skincare Quiz</h1>
     <div class="progress" style="height: 1px;">
-       <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-     </div>
+        <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100"></div>
+    </div>
     <h2>Step 8: Favorite Products</h2>
     <p>DO you have products you currently use and love?</p>
     <form>
-        <a href="/8yes.html">
-    <button type="button" class="btn btn-light btn-lg btn-block favorite" data-toggle="button" aria-pressed="false" autocomplete="off">Sure Do!</button>
-    </a>
-    <a href="/9pricepoint.html">
-    <button type="button" class="btn btn-light btn-lg btn-block favorite" data-toggle="button" aria-pressed="false" autocomplete="off">I wish!</button>
-    </a>
-      </div>
-      </form>
+        <a href="8yes.html">
+            <button type="button" class="btn btn-light btn-lg btn-block favorite"
+                aria-pressed="false" autocomplete="off">Sure Do!</button>
+        </a>
+        <a href="9pricepoint.html">
+            <button type="button" class="btn btn-light btn-lg btn-block favorite"
+                aria-pressed="false" autocomplete="off">I wish!</button>
+        </a>
+    </form>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
