--- a/8yes.html
+++ b/8yes.html
@@ -11,15 +11,28 @@
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <title>{Username}'s Skincare Quiz</title>
+    <title>Laurie's Skincare Quiz</title>
   </head>
   <body style="background-color: #FBEBEB;">
 
     <!-- Page 8 YES-->
+    <h1>Laurie's Skincare Quiz</h1>
+    <div class="progress" style="height: 1px;">
+      <div class="progress-bar" role="progressbar" style="width: 84%;" aria-valuenow="25" aria-valuemin="0"
+        aria-valuemax="100"></div>
+    </div>
+  
+    <h2>Step 8: Favorite Products</h2>
+    <p>Add your favorite products here. We will not suggest new ones for you in the same category and will double check your routine to make sure there are no conflicting ingredients.</p>
 
+    <nav class="navbar navbar-light bg-light">
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        </form>
+      </nav>
 
     <div class="formbutton">
-        <a href="/2areasofconcern.html">
+        <a href="/8yes2.html">
         <button type="button" class="btn btn-dark">Next</button>
         </a>
       </div>
