--- a/8yes2.html
+++ b/8yes2.html
@@ -16,6 +16,37 @@
   <body style="background-color: #FBEBEB;">
 
     <!-- Page 8 YES 2 -->
+    <h1>Laurie's Skincare Quiz</h1>
+    <div class="progress" style="height: 1px;">
+      <div class="progress-bar" role="progressbar" style="width: 84%;" aria-valuenow="25" aria-valuemin="0"
+        aria-valuemax="100"></div>
+    </div>
+  
+    <h2>Step 8: Favorite Products</h2>
+    <p>Add your favorite products here. We will not suggest new ones for you in the same category and will double check your routine to make sure there are no conflicting ingredients.</p>
+
+    <nav class="navbar navbar-light bg-light">
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Laneige Sleeping" aria-label="Search">
+        </form>
+      </nav>
+
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">LANEIGE Water Sleeping Mask</h5>
+          <a href="#" class="btn btn-primary bailey">+</a>
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">LANEIGE Cica Sleeping Mask</h5>
+          <a href="#" class="btn btn-primary bailey">+</a>
+        </div>
+      </div>
+
 
 
     <div class="formbutton">
