--- a/3skintype.html
+++ b/3skintype.html
@@ -10,10 +10,14 @@
 
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+
 
     <title>{Username}'s Skincare Quiz</title>
   </head>
-  <body style="background-color: #FBEBEB;">
+  <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 3.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
  <!-- Page 3 -->
    <h1>Laurie's Skincare Quiz</h1>
    <div class="progress" style="height: 2px;">
@@ -23,10 +27,10 @@
    <p>Select the best descriptor of your skin type</p>
    <form>
     <div class="step3container">
-   <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Dry. Your skin feels tight, flaky, and itchy all over</button>
-   <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Oily. Your skin looks shiny, and your pores may be more visible</button>
-   <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Combination. Your skin is tight and flaky in some spots and oily in others</button>
-   <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Normal. Your skin looks and feels generally balanced</button>
+   <button type="button" class="btn btn-light btn-lg btn-block btn-wrap-text" data-toggle="button" aria-pressed="false" autocomplete="off">Dry. Your skin feels tight, flaky, and itchy all over</button>
+   <button type="button" class="btn btn-light btn-lg btn-block btn-wrap-text" data-toggle="button" aria-pressed="false" autocomplete="off">Oily. Your skin looks shiny, and your pores may be more visible</button>
+   <button type="button" class="btn btn-light btn-lg  btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Combination. Your skin is tight and flaky in some spots and oily in others</button>
+   <button type="button" class="btn btn-light btn-lg btn-block btn-wrap-text" data-toggle="button" aria-pressed="false" autocomplete="off">Normal. Your skin looks and feels generally balanced</button>
   </div>
    <div class="formbutton">
    <a href="/4skinconcerns.html">
