--- a/8yes2.html
+++ b/8yes2.html
@@ -10,6 +10,10 @@
 
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+
 
     <title>{Username}'s Skincare Quiz</title>
   </head>
@@ -32,7 +36,7 @@
       </nav>
 
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <img class="card-img-top" src="/images/Laneigeblue.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">LANEIGE Water Sleeping Mask</h5>
           <a href="#" class="btn btn-primary bailey">+</a>
@@ -40,13 +44,31 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+        <img class="card-img-left" src="/images/Laneigegreen.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">LANEIGE Cica Sleeping Mask</h5>
           <button type="button" class="btn btn-primary bailey">+</button>
         </div>
       </div>
 
+      <div class="container productscontainer">
+      <div class="media">
+  <img class="align-self-start mr-3" src="/images/Laneigeblue.png" alt="Laneige blue water sleeping mask container">
+  <div class="media-body">
+    <h5 class="mt-0">LANEIGE Water Sleeping Mask</h5>
+    <button type="button" class="btn btn-primary bailey">+</button>
+  </div>
+</div>
+</div>
+<div class="container productscontainer">
+<div class="media">
+  <img class="align-self-start mr-3" src="/images/Laneigegreen.png" alt="Laneige blue water sleeping mask container">
+  <div class="media-body">
+    <h5 class="mt-0">LANEIGE Cica Sleeping Mask</h5>
+    <button type="button" class="btn btn-primary bailey">+</button>
+  </div>
+</div>
+</div>
 
 
     <div class="formbutton">
