--- a/9pricepoint.html
+++ b/9pricepoint.html
@@ -10,6 +10,10 @@
 
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+
 
     <title>{Username}'s Skincare Quiz</title>
    <style> 
@@ -19,8 +23,17 @@
   <body style="background-color: #FBEBEB; background-image: url(../images/Step9Wave.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
 
     <!-- Page 9 -->
-
-
+    <h1>Laurie's Skincare Quiz</h1>
+    <div class="progress" style="height: 1px;">
+        <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0"
+            aria-valuemax="100"></div>
+    </div>
+    <h2>Step 9: Price Point</h2>
+    <p>What's your ideal price range for your skincare routine?</p>
+    <form>
+      <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Less than $20 per product</button>
+      <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">$20-$50 per product</button>
+      <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">$50+ per product</button>
     <div class="formbutton">
         <a href="/2areasofconcern.html">
         <button type="button" class="btn btn-dark">Find My Routine</button>
