--- a/7productuse.html
+++ b/7productuse.html
@@ -10,10 +10,14 @@
 
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+
 
     <title>{Username}'s Skincare Quiz</title>
   </head>
-  <body style="background-color: #FBEBEB;">
+  <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 7.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
 <!-- Page 7 -->
 <h1>Laurie's Skincare Quiz</h1>
 <div class="progress" style="height: 1px;">
