--- a/8yes.html
+++ b/8yes.html
@@ -10,6 +10,10 @@
 
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+
 
     <title>Laurie's Skincare Quiz</title>
   </head>
