--- a/3skintype.html
+++ b/3skintype.html
@@ -11,26 +11,45 @@
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
 
 
     <title>{Username}'s Skincare Quiz</title>
   </head>
   <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 3.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
  <!-- Page 3 -->
-   <h1>Laurie's Skincare Quiz</h1>
-   <div class="progress" style="height: 2px;">
-       <div class="progress-bar" role="progressbar" style="width: 42%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-     </div>
+ <div class="buttonhead">
+  <a href="/2areasofconcern.html">
+  <button type="button" class="btn btn-light btnback"><</button>
+</a>
+<h1>Laurie's Skincare Quiz</h1>
+</div>
+<div class="progress" style="height: 2px;">
+    <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+  <div class="progress" style="height: 2px;">
+    <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
    <h2>Step 3: Your Skin Type</h2>
    <p>Select the best descriptor of your skin type</p>
    <form>
     <div class="step3container">
-   <button type="button" class="btn btn-light btn-lg btn-block btn-wrap-text" data-toggle="button" aria-pressed="false" autocomplete="off">Dry. Your skin feels tight, flaky, and itchy all over</button>
-   <button type="button" class="btn btn-light btn-lg btn-block btn-wrap-text" data-toggle="button" aria-pressed="false" autocomplete="off">Oily. Your skin looks shiny, and your pores may be more visible</button>
-   <button type="button" class="btn btn-light btn-lg  btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Combination. Your skin is tight and flaky in some spots and oily in others</button>
-   <button type="button" class="btn btn-light btn-lg btn-block btn-wrap-text" data-toggle="button" aria-pressed="false" autocomplete="off">Normal. Your skin looks and feels generally balanced</button>
+   <button type="button" class="btn btn-light btn-lg btn-block btn-wrap-text" data-toggle="button" aria-pressed="false" autocomplete="off">
+    <h4>Dry</h4> 
+    <p>Your skin feels tight, flaky, and itchy all over </p> </button>
+   <button type="button" class="btn btn-light btn-lg btn-block btn-wrap-text" data-toggle="button" aria-pressed="false" autocomplete="off">
+    <h4>Oily</h4>
+    <p> Your skin looks shiny, and your pores may be visible</p>
+    </button>
+   <button type="button" class="btn btn-light btn-lg  btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">
+    <h4>Combination</h4>
+    <p> Your skin is flaky in some spots and oily in others</p>
+  </button>
+   <button type="button" class="btn btn-light btn-lg btn-block btn-wrap-text" data-toggle="button" aria-pressed="false" autocomplete="off">
+    <h4>Normal</h4
+      <p>Your skin looks and feels generally balanced</p> </button>
   </div>
    <div class="formbutton">
    <a href="/4skinconcerns.html">
