--- a/7productuse.html
+++ b/7productuse.html
@@ -11,33 +11,39 @@
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
 
 
     <title>{Username}'s Skincare Quiz</title>
   </head>
   <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 7.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
 <!-- Page 7 -->
+<div class="buttonhead">
+  <a href="/6skintone.html">
+  <button type="button" class="btn btn-light btnback"><</button>
+</a>
 <h1>Laurie's Skincare Quiz</h1>
-<div class="progress" style="height: 1px;">
-    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+<div class="progress" style="height: 2px;">
+    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="70%"></div>
   </div>
-<div class="progress" style="height: 1px;">
-    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress" style="height: 2px;">
+    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="70%"></div>
   </div>
 <h2>Step 7: Product Use</h2>
 <p>Please select all products you currently use</p>
 <form>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Cleanser</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Toner</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Essence</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Serum(s)</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Face Masks</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Eye Cream</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Moisturizer</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Night Cream</button>
-    <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">SPF</button>
+    <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Cleanser</button>
+    <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Toner</button>
+    <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Essence</button>
+    <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Serum(s)</button>
+    <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Face Masks</button>
+    <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Eye Cream</button>
+    <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Moisturizer</button>
+    <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Night Cream</button>
+    <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">SPF</button>
     <div class="formbutton">
         <a href="/8favoriteproducts.html">
     <button type="button" class="btn btn-lg btn-dark">Next</button>
