--- a/2areasofconcern.html
+++ b/2areasofconcern.html
@@ -11,8 +11,9 @@
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
 
 
     <title>{Username}'s Skincare Quiz</title>
@@ -20,13 +21,18 @@
   <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 2.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
 
     <!-- Page 2 -->
+    <div class="buttonhead">
+      <a href="/index.html">
+      <button type="button" class="btn btn-light btnback"><</button>
+    </a>
     <h1>Laurie's Skincare Quiz</h1>
-    <div class="progress" style="height: 1px;">
-       <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-     </div>
-   <div class="progress" style="height: 1px;">
-       <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-     </div>
+  </div>
+    <div class="progress" style="height: 2px;">
+        <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <div class="progress" style="height: 2px;">
+        <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
     <h2>Step 2: Areas of Concern</h2>
     <p>Select any areas you'd like to focus on</p>
     <form>
