--- a/4skinconcerns.html
+++ b/4skinconcerns.html
@@ -11,17 +11,26 @@
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
 
 
     <title>{Username}'s Skincare Quiz</title>
   </head>
   <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 4.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
     <!-- Page 4 -->
+    <div class="buttonhead">
+      <a href="/3skintype.html">
+      <button type="button" class="btn btn-light btnback"><</button>
+    </a>
     <h1>Laurie's Skincare Quiz</h1>
-    <div class="progress" style="height: 1px;">
-        <div class="progress-bar" role="progressbar" style="width: 56%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress" style="height: 2px;">
+        <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <div class="progress" style="height: 2px;">
+        <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
     <h2>Step 4: Select Your Skin Concerns</h2>
     <p>Tell us about your main skin concerns (Select all that apply)</p>
