--- a/5skinsensitivity.html
+++ b/5skinsensitivity.html
@@ -11,28 +11,34 @@
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
 
 
     <title>{Username}'s Skincare Quiz</title>
   </head>
   <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 5.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
    <!-- Page 5 -->
-   <h1>Laurie's Skincare Quiz</h1>
-   <div class="progress" style="height: 1px;">
-       <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-     </div>
-   <div class="progress" style="height: 1px;">
-       <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-     </div>
+   <div class="buttonhead">
+    <a href="/4skinconcerns.html">
+    <button type="button" class="btn btn-light btnback"><</button>
+  </a>
+  <h1>Laurie's Skincare Quiz</h1>
+  </div>
+  <div class="progress" style="height: 2px;">
+      <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress" style="height: 2px;">
+      <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
    <h2>Step 5: Skin Sensitivity</h2>
    <p>How does your skin normally react when trying a new product?</p>
    <form>
-       <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">My skin is easily irritated</button>
-       <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">My skin is rarely irritated</button>
-       <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">Totally depends</button>
-       <button type="button" class="btn btn-light btn-lg btn-block data-toggle="button aria-pressed="false" autocomplete="off">I don't often try new products</button>
+       <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">My skin is easily irritated</button>
+       <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">My skin is rarely irritated</button>
+       <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Totally depends</button>
+       <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">I don't often try new products</button>
        <div class="formbutton">
         <a href="/6skintone.html">
        <button type="button" class="btn btn-lg btn-dark">Next</button>
