--- a/6skintone.html
+++ b/6skintone.html
@@ -13,22 +13,29 @@
   <!--CSS Stylesheet -->
   <link rel="stylesheet" href="/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
 
 
   <title>{Username}'s Skincare Quiz</title>
 </head>
 
-<body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 6.png); background-repeat: no-repeat; background-size: 100%; background-position: 0svw;">
+<body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 6.png); background-repeat: no-repeat; background-size: 85%; background-position: top;">
 
   <!-- Page 6 -->
+  <div class="buttonhead">
+    <a href="/5skinsensitivity.html">
+    <button type="button" class="btn btn-light btnback"><</button>
+  </a>
   <h1>Laurie's Skincare Quiz</h1>
-  <div class="progress" style="height: 1px;">
-    <div class="progress-bar" role="progressbar" style="width: 84%;" aria-valuenow="25" aria-valuemin="0"
-      aria-valuemax="100"></div>
   </div>
-
+  <div class="progress" style="height: 2px;">
+      <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress" style="height: 2px;">
+      <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
   <h2>Step 6: Skin Tone</h2>
   <p>Select the best representation of your skin tone below</p>
 
