--- a/8favoriteproducts.html
+++ b/8favoriteproducts.html
@@ -13,8 +13,9 @@
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
 
 
     <title>{Username}'s Skincare Quiz</title>
@@ -23,11 +24,18 @@
 <body style="background-color: #FBEBEB; background-image: url(../images/Step8Wave.png); background-repeat: no-repeat; background-size: 100%; background-position: bottom;">
 
     <!-- Page 8 -->
-    <h1>Laurie's Skincare Quiz</h1>
-    <div class="progress" style="height: 1px;">
-        <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0"
-            aria-valuemax="100"></div>
-    </div>
+    <div class="buttonhead">
+        <a href="/7productuse.html">
+        <button type="button" class="btn btn-light btnback"><</button>
+      </a>
+      <h1>Laurie's Skincare Quiz</h1>
+      </div>
+      <div class="progress" style="height: 2px;">
+          <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100%"></div>
+        </div>
+        <div class="progress" style="height: 2px;">
+          <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
     <h2>Step 8: Favorite Products</h2>
     <p>DO you have products you currently use and love?</p>
     <form>
