--- a/8yes2.html
+++ b/8yes2.html
@@ -11,21 +11,27 @@
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
 
     <title>{Username}'s Skincare Quiz</title>
   </head>
   <body style="background-color: #FBEBEB;">
 
     <!-- Page 8 YES 2 -->
+    <div class="buttonhead">
+      <a href="/7productuse.html">
+      <button type="button" class="btn btn-light btnback"><</button>
+    </a>
     <h1>Laurie's Skincare Quiz</h1>
-    <div class="progress" style="height: 1px;">
-      <div class="progress-bar" role="progressbar" style="width: 84%;" aria-valuenow="25" aria-valuemin="0"
-        aria-valuemax="100"></div>
     </div>
-  
+    <div class="progress" style="height: 2px;">
+        <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100%"></div>
+      </div>
+      <div class="progress" style="height: 2px;">
+        <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
     <h2>Step 8: Favorite Products</h2>
     <p>Add your favorite products here. We will not suggest new ones for you in the same category and will double check your routine to make sure there are no conflicting ingredients.</p>
 
@@ -51,7 +57,7 @@
         </div>
       </div>
 
-      <div class="container productscontainer">
+      <!--<div class="container productscontainer">
       <div class="media">
   <img class="align-self-start mr-3" src="/images/Laneigeblue.png" alt="Laneige blue water sleeping mask container">
   <div class="media-body">
@@ -68,11 +74,11 @@
     <button type="button" class="btn btn-primary bailey">+</button>
   </div>
 </div>
-</div>
+</div>-->
 
 
     <div class="formbutton">
-        <a href="/2areasofconcern.html">
+        <a href="/9pricepoint.html">
         <button type="button" class="btn btn-dark">Next</button>
         </a>
       </div>
