--- a/9pricepoint.html
+++ b/9pricepoint.html
@@ -11,9 +11,9 @@
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
 
     <title>{Username}'s Skincare Quiz</title>
    <style> 
@@ -23,11 +23,18 @@
   <body style="background-color: #FBEBEB; background-image: url(../images/Step9Wave.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
 
     <!-- Page 9 -->
+    <div class="buttonhead">
+      <a href="/8favoriteproducts.html">
+      <button type="button" class="btn btn-light btnback"><</button>
+    </a>
     <h1>Laurie's Skincare Quiz</h1>
-    <div class="progress" style="height: 1px;">
-        <div class="progress-bar" role="progressbar" style="width: 28%;" aria-valuenow="25" aria-valuemin="0"
-            aria-valuemax="100"></div>
     </div>
+    <div class="progress" style="height: 2px;">
+        <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100%"></div>
+      </div>
+      <div class="progress" style="height: 2px;">
+        <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
     <h2>Step 9: Price Point</h2>
     <p>What's your ideal price range for your skincare routine?</p>
     <form>
@@ -35,7 +42,7 @@
       <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">$20-$50 per product</button>
       <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">$50+ per product</button>
     <div class="formbutton">
-        <a href="/2areasofconcern.html">
+        <a href="/index.html">
         <button type="button" class="btn btn-dark">Find My Routine</button>
         </a>
       </div>
