--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
     <!--CSS Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:ital,wght@0,100;0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
 
 
     <title>{Username}'s Skincare Quiz</title>
   </head>
   <body style="background-color: #FBEBEB;">
     <!-- Page 1 -->
+   
+    <div class="buttonhead">
+      <button type="button" class="btn btn-light btnback"><</button>
     <h1>Laurie's Skincare Quiz</h1>
+  </div>
     <div class="progress" style="height: 2px;">
-        <div class="progress-bar" role="progressbar" style="width: 14%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <div class="progress" style="height: 2px;">
+        <div class="progress-bar" role="progressbar" style="width: 10%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
     <h2>Step 1: Information</h2>
     <p>Let's learn more about you!</p>
@@ -71,3 +79,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
+
