--- a/6skintone.html
+++ b/6skintone.html
@@ -42,20 +42,20 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6 skinbutton">
-        <button type="button" class="skintone skin1"></button>
-        <button type="button" class="skintone skin2"></button>
+        <button type="button" class="skintone skin1 icon" ></button>
+        <button type="button" class="skintone skin2 icon"></button>
       </div>
     </div>
       <div class="row">
         <div class="col-sm-6 skinbutton">
-          <button type="button" class="skintone skin3"></button>
-          <button type="button" class="skintone skin4"></button>
+          <button type="button" class="skintone skin3 icon"></button>
+          <button type="button" class="skintone skin4 icon"></button>
         </div>
       </div>
       <div class="row">
           <div class="col-sm-6 skinbutton">
-            <button type="button" class="skintone skin5"></button>
-            <button type="button" class="skintone skin6"></button>
+            <button type="button" class="skintone skin5 icon"></button>
+            <button type="button" class="skintone skin6 icon"></button>
           </div>
         </div>
       <div class="row">
@@ -66,10 +66,11 @@
           </div>
       <div class="row">
               <div class="col-sm-6 skinbutton">
-                <button type="button" class="skintone skin8"></button>
-                <button type="button" class="skintone skin10"></button>
+                <button type="button" class="skintone skin8 icon"></button>
+                <button type="button" class="skintone skin10 icon"></button>
               </div>
             </div>
+           
 
 
               <div class="formbutton">
@@ -95,3 +96,4 @@
 </body>
 
 </html>
+
