--- a/9pricepoint.html
+++ b/9pricepoint.html
@@ -36,7 +36,7 @@
         <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
     <h2>Step 9: Price Point</h2>
-    <p>What's your ideal price range for your skincare routine?</p>
+    <p>What's your ideal price range for your skincare routine? We will ensure the overall budget does not exceed your selection.</p>
     <form>
       <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Less than $20 per product</button>
       <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">$20-$50 per product</button>
