--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <option>Other</option>
               <option>Prefer not to respond</option>
             </select>
-            <small id="emailHelp" class="form-text text-muted">The reason we need this information.</small>
+            <small id="emailHelp" class="form-text text-muted">So we can address you the right way!</small>
         </div>
         <div class="form-group">
             <label for="Ethnicity">Which of the following best describes you?</label>
