--- a/2areasofconcern.html
+++ b/2areasofconcern.html
@@ -22,7 +22,7 @@
 
     <!-- Page 2 -->
     <div class="buttonhead">
-      <a href="/index.html">
+      <a href="index.html">
       <button type="button" class="btn btn-light btnback"><</button>
     </a>
     <h1>Laurie's Skincare Quiz</h1>
@@ -42,7 +42,7 @@
     <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Body</button>
     <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Other</button>
     <div class="formbutton">
-    <a href="/3skintype.html">
+    <a href="3skintype.html">
     <button type="button" class="btn btn-lg btn-dark">Next</button> 
     </a>
     </div>
