--- a/9pricepoint.html
+++ b/9pricepoint.html
@@ -24,7 +24,7 @@
 
     <!-- Page 9 -->
     <div class="buttonhead">
-      <a href="/8favoriteproducts.html">
+      <a href="8favoriteproducts.html">
       <button type="button" class="btn btn-light btnback"><</button>
     </a>
     <h1>Laurie's Skincare Quiz</h1>
@@ -42,7 +42,7 @@
       <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">$20-$50 per product</button>
       <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">$50+ per product</button>
     <div class="formbutton">
-        <a href="/index.html">
+        <a href="index.html">
         <button type="button" class="btn btn-dark">Find My Routine</button>
         </a>
       </div>
