--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <small id="emailHelp" class="form-text text-muted">Everyone's skin has unique needs - we want to make sure we're meeting yours.</small>
         </div>
         <div class="formbutton">
-        <a href="/2areasofconcern.html">
+        <a href="2areasofconcern.html">
         <button type="button" class="btn btn-lg btn-dark">Next</button>
         </a>
       </div>
