corrected href links

--- a/3skintype.html
+++ b/3skintype.html
@@ -21,7 +21,7 @@
   <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 3.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
  <!-- Page 3 -->
  <div class="buttonhead">
-  <a href="/2areasofconcern.html">
+  <a href="2areasofconcern.html">
   <button type="button" class="btn btn-light btnback"><</button>
 </a>
 <h1>Laurie's Skincare Quiz</h1>
@@ -52,7 +52,7 @@
       <p>Your skin looks and feels generally balanced</p> </button>
   </div>
    <div class="formbutton">
-   <a href="/4skinconcerns.html">
+   <a href="4skinconcerns.html">
    <button type="button" class="btn btn-lg btn-dark">Next</button>
     </div>
     </a>
