--- a/4skinconcerns.html
+++ b/4skinconcerns.html
@@ -21,7 +21,7 @@
   <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 4.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
     <!-- Page 4 -->
     <div class="buttonhead">
-      <a href="/3skintype.html">
+      <a href="3skintype.html">
       <button type="button" class="btn btn-light btnback"><</button>
     </a>
     <h1>Laurie's Skincare Quiz</h1>
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="formbutton">
-            <a href="/5skinsensitivity.html">
+            <a href="5skinsensitivity.html">
              <button type="button" class="btn btn-lg btn-dark">Next</button>
              </a>
         </div>
