--- a/7productuse.html
+++ b/7productuse.html
@@ -21,7 +21,7 @@
   <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 7.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
 <!-- Page 7 -->
 <div class="buttonhead">
-  <a href="/6skintone.html">
+  <a href="6skintone.html">
   <button type="button" class="btn btn-light btnback"><</button>
 </a>
 <h1>Laurie's Skincare Quiz</h1>
@@ -45,7 +45,7 @@
     <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Night Cream</button>
     <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">SPF</button>
     <div class="formbutton">
-        <a href="/8favoriteproducts.html">
+        <a href="8favoriteproducts.html">
     <button type="button" class="btn btn-lg btn-dark">Next</button>
     </a>
     </div>
