--- a/8favoriteproducts.html
+++ b/8favoriteproducts.html
@@ -25,7 +25,7 @@
 
     <!-- Page 8 -->
     <div class="buttonhead">
-        <a href="/7productuse.html">
+        <a href="7productuse.html">
         <button type="button" class="btn btn-light btnback"><</button>
       </a>
       <h1>Laurie's Skincare Quiz</h1>
