--- a/8yes.html
+++ b/8yes.html
@@ -22,7 +22,7 @@
 
     <!-- Page 8 YES-->
     <div class="buttonhead">
-      <a href="/8favoriteproducts.html">
+      <a href="8favoriteproducts.html">
       <button type="button" class="btn btn-light btnback"><</button>
     </a>
     <h1>Laurie's Skincare Quiz</h1>
@@ -44,7 +44,7 @@
       </nav>
 
     <div class="formbutton">
-        <a href="/8yes2.html">
+        <a href="8yes2.html">
         <button type="button" class="btn btn-dark">Next</button>
         </a>
       </div>
