--- a/8yes2.html
+++ b/8yes2.html
@@ -21,7 +21,7 @@
 
     <!-- Page 8 YES 2 -->
     <div class="buttonhead">
-      <a href="/7productuse.html">
+      <a href="7productuse.html">
       <button type="button" class="btn btn-light btnback"><</button>
     </a>
     <h1>Laurie's Skincare Quiz</h1>
@@ -78,7 +78,7 @@
 
 
     <div class="formbutton">
-        <a href="/9pricepoint.html">
+        <a href="9pricepoint.html">
         <button type="button" class="btn btn-dark">Next</button>
         </a>
       </div>
