--- a/5skinsensitivity.html
+++ b/5skinsensitivity.html
@@ -21,7 +21,7 @@
   <body style="background-color: #FBEBEB; background-image: url(../images/Quiz_Step\ 5.png); background-repeat: no-repeat; background-size: 100%; background-position: top;">
    <!-- Page 5 -->
    <div class="buttonhead">
-    <a href="/4skinconcerns.html">
+    <a href="4skinconcerns.html">
     <button type="button" class="btn btn-light btnback"><</button>
   </a>
   <h1>Laurie's Skincare Quiz</h1>
@@ -40,7 +40,7 @@
        <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">Totally depends</button>
        <button type="button" class="btn btn-light btn-lg btn-block" data-toggle="button" aria-pressed="false" autocomplete="off">I don't often try new products</button>
        <div class="formbutton">
-        <a href="/6skintone.html">
+        <a href="6skintone.html">
        <button type="button" class="btn btn-lg btn-dark">Next</button>
     </a>
 </div>
