--- a/6skintone.html
+++ b/6skintone.html
@@ -25,7 +25,7 @@
 
   <!-- Page 6 -->
   <div class="buttonhead">
-    <a href="/5skinsensitivity.html">
+    <a href="5skinsensitivity.html">
     <button type="button" class="btn btn-light btnback"><</button>
   </a>
   <h1>Laurie's Skincare Quiz</h1>
@@ -74,7 +74,7 @@
 
 
               <div class="formbutton">
-                <a href="/7productuse.html">
+                <a href="7productuse.html">
                   <button type="button" class="btn btn-lg btn-dark">Next</button>
                 </a>
               </div>
